--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-    "export": "next export",
+		"export": "next export",
 		"start": "next start",
 		"lint": "eslint ."
 	},
@@ -27,6 +27,7 @@
 		"urlcat": "^2.0.4"
 	},
 	"devDependencies": {
+		"@cloudflare/workers-types": "^3.10.0",
 		"@tailwindcss/typography": "^0.5.2",
 		"@types/babel__generator": "^7",
 		"@types/babel__traverse": "^7",
