--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["@cloudflare/workers-types"],
     "module": "commonjs",
     "target": "es5",
     "sourceMap": true,
