--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
 		"dayjs": "^1.11.0",
 		"envsafe": "^2.0.3",
 		"jsonwebtoken": "^8.5.1",
-		"next": "^12.1.2",
-		"react": "18.0.0",
-		"react-dom": "18.0.0",
+		"next": "^13.0.2",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-syntax-highlighter": "^15.5.0",
 		"sharp": "^0.30.7",
 		"urlcat": "^2.0.4"
@@ -44,7 +44,7 @@
 		"autoprefixer": "^10.4.4",
 		"discord-api-types": "^0.30.0",
 		"eslint": "^8.12.0",
-		"eslint-config-next": "12.1.2",
+		"eslint-config-next": "^13.0.2",
 		"eslint-config-xo": "^0.40.0",
 		"eslint-config-xo-react": "^0.27.0",
 		"eslint-config-xo-typescript": "^0.50.0",
