--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
 		"@babel/parser": "^7.17.10",
 		"@babel/traverse": "^7.17.10",
 		"@babel/types": "^7.17.10",
+		"@nullptrs/feed": "^4.2.2",
 		"axios": "^0.26.1",
 		"common-tags": "^1.8.2",
 		"cookie": "^0.4.2",
 		"dayjs": "^1.11.0",
 		"envsafe": "^2.0.3",
-		"feed": "git@github.com:voidstar0/feed.git",
 		"jsonwebtoken": "^8.5.1",
 		"next": "^13.0.2",
 		"react": "^18.2.0",
