--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "next",
+		"dev:watch": "next-remote-watch ./posts",
 		"build": "next build",
 		"export": "next export",
 		"start": "next start",
@@ -14,17 +15,24 @@
 		"@babel/parser": "^7.17.10",
 		"@babel/traverse": "^7.17.10",
 		"@babel/types": "^7.17.10",
+		"@mdx-js/loader": "^2.2.1",
+		"@next/mdx": "^13.1.1",
 		"@nullptrs/feed": "^4.2.2",
 		"axios": "^0.26.1",
 		"common-tags": "^1.8.2",
 		"cookie": "^0.4.2",
 		"dayjs": "^1.11.0",
 		"envsafe": "^2.0.3",
+		"glob": "^8.0.3",
+		"globby": "^13.1.3",
+		"gray-matter": "^4.0.3",
 		"jsonwebtoken": "^8.5.1",
 		"next": "^13.0.2",
+		"next-mdx-remote": "^4.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-syntax-highlighter": "^15.5.0",
+		"remark-images": "^3.1.0",
 		"sharp": "^0.30.7",
 		"urlcat": "^2.0.4"
 	},
@@ -35,6 +43,7 @@
 		"@types/babel__traverse": "^7",
 		"@types/common-tags": "^1.8.1",
 		"@types/cookie": "^0.4.1",
+		"@types/glob": "^8",
 		"@types/jsonwebtoken": "^8.5.8",
 		"@types/react": "^17.0.43",
 		"@types/react-syntax-highlighter": "^13.5.2",
@@ -49,6 +58,7 @@
 		"eslint-config-xo": "^0.40.0",
 		"eslint-config-xo-react": "^0.27.0",
 		"eslint-config-xo-typescript": "^0.50.0",
+		"next-remote-watch": "^2.0.0",
 		"postcss": "^8.4.12",
 		"prettier": "^2.6.1",
 		"tailwindcss": "^3.0.23",
