--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react-dom": "^18.2.0",
 		"react-syntax-highlighter": "^15.5.0",
 		"rehype-prism-plus": "^1.6.1",
+		"remark-gfm": "^3.0.1",
 		"remark-images": "^3.1.0",
 		"sharp": "^0.30.7",
 		"urlcat": "^2.0.4"
