refactor: move to app router for ssr goodness

--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
 		"globby": "^13.1.3",
 		"gray-matter": "^4.0.3",
 		"jsonwebtoken": "^8.5.1",
-		"next": "^13.0.2",
-		"next-mdx-remote": "^4.2.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"next": "latest",
+		"next-mdx-remote": "^4.4.1",
+		"react": "latest",
+		"react-dom": "latest",
 		"react-syntax-highlighter": "^15.5.0",
 		"rehype-prism-plus": "^1.6.1",
 		"remark-gfm": "^3.0.1",
@@ -57,7 +57,7 @@
 		"autoprefixer": "^10.4.4",
 		"discord-api-types": "^0.30.0",
 		"eslint": "^8.12.0",
-		"eslint-config-next": "^13.0.2",
+		"eslint-config-next": "latest",
 		"eslint-config-xo": "^0.40.0",
 		"eslint-config-xo-react": "^0.27.0",
 		"eslint-config-xo-typescript": "^0.50.0",
