--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
 		"next-mdx-remote": "^4.4.1",
 		"react": "latest",
 		"react-dom": "latest",
-		"react-syntax-highlighter": "^15.5.0",
-		"rehype-prism-plus": "^1.6.1",
+		"rehype-trest-sitter": "^0.1.0",
 		"remark-gfm": "^3.0.1",
 		"remark-images": "^3.1.0",
 		"sharp": "^0.30.7",
