--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"next-mdx-remote": "^4.4.1",
 		"react": "latest",
 		"react-dom": "latest",
+		"rehype-tree-sitter": "^0.1.4",
 		"rehype-trest-sitter": "^0.1.0",
 		"remark-gfm": "^3.0.1",
 		"remark-images": "^3.1.0",
