fix: use proper gh action package

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,10 @@ jobs:
           cache: 'npm'
 
       - name: Setup Rust environment
-        uses: actions/setup-rust@v1
+        uses: actions-rs/toolchain@v1
         with:
-          rust-version: stable
+          toolchain: stable
+          override: true
  
       - name: Install dependencies
         run: npm install
