fix: potentially fix broken build by including nj-cli in ci build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
         with:
           toolchain: stable
           override: true
+
+      - name: Install nj-cli build
+        run:  cargo install --path nj-cli
  
       - name: Install dependencies
         run: npm install
