--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     name: Build and Test
     timeout-minutes: 15
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     env:
      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
