--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "grammars/tree-sitter-diff"]
 	path = grammars/tree-sitter-diff
 	url = git@github.com:the-mikedavis/tree-sitter-diff.git
+[submodule "grammars/tree-sitter-c"]
+	path = grammars/tree-sitter-c
+	url = https://github.com/tree-sitter/tree-sitter-c
