--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "next",
 		"dev:watch": "next-remote-watch ./posts",
-		"build": "turbo run build",
+		"install-grammars": "cd grammars/tree-sitter-typescript && npm install && cd ../tree-sitter-cpp && npm install",
+		"build": "npm run install-grammars && turbo run build",
 		"export": "next export",
 		"start": "next start",
 		"lint": "eslint ."
@@ -32,7 +33,7 @@
 		"next-mdx-remote": "^4.4.1",
 		"react": "latest",
 		"react-dom": "latest",
-		"rehype-tree-sitter": "^0.1.4",
+		"rehype-tree-sitter": "^0.2.4",
 		"rehype-trest-sitter": "^0.1.0",
 		"remark-gfm": "^3.0.1",
 		"remark-images": "^3.1.0",
