feat: table of contents + better styling

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@babel/parser": "^7.17.10",
 		"@babel/traverse": "^7.17.10",
 		"@babel/types": "^7.17.10",
+		"@mapbox/rehype-prism": "^0.8.0",
 		"@mdx-js/loader": "^2.2.1",
 		"@next/mdx": "^13.1.1",
 		"@nullptrs/feed": "^4.2.2",
@@ -47,6 +48,7 @@
 		"@types/cookie": "^0.4.1",
 		"@types/glob": "^8",
 		"@types/jsonwebtoken": "^8.5.8",
+		"@types/mapbox__rehype-prism": "^0",
 		"@types/react": "^17.0.43",
 		"@types/react-syntax-highlighter": "^13.5.2",
 		"@types/sharp": "^0",
