--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
 		"urlcat": "^2.0.4"
 	},
 	"devDependencies": {
-		"@cloudflare/next-on-pages": "^1.10.0",
-		"@cloudflare/workers-types": "^3.19.0",
+		"@cloudflare/next-on-pages": "^1.13.6",
+		"@cloudflare/workers-types": "^4.20241127.0",
 		"@tailwindcss/typography": "^0.5.2",
 		"@types/babel__generator": "^7",
 		"@types/babel__traverse": "^7",
@@ -74,6 +74,6 @@
 		"prettier": "^2.6.1",
 		"tailwindcss": "^3.0.23",
 		"typescript": "^4.6.3",
-		"wrangler": "^3.32.0"
+		"wrangler": "^3.91.0"
 	}
 }
