--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@next/mdx": "^13.1.1",
 		"@nullptrs/feed": "^4.2.2",
 		"axios": "^0.26.1",
+		"botid": "^1.4.1",
 		"bright": "^0.8.4",
 		"common-tags": "^1.8.2",
 		"cookie": "^0.4.2",
