--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,13 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn/*
-!.yarn/releases
-!.yarn/plugins
-!.yarn/sdks
-
-# next.js
-/.next/
-/build
-/out
-# misc
 .DS_Store
-*.pem
-static
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env
-
-# vercel
-.vercel
-
-# editors
-.idea
-.vscode
-
-# typescript
+/node_modules/
 *.tsbuildinfo
 
-# cloudflare
+# React Router
+/.react-router/
+/build/
+
+# Cloudflare
+.mf
 .wrangler
+.dev.vars*
+
