--- a/package.json
+++ b/package.json
@@ -1,82 +1,46 @@
 {
-	"name": "blog",
-	"version": "1.0.0",
+	"name": "nullptrs",
 	"private": true,
+	"type": "module",
 	"scripts": {
-		"dev": "next",
-		"dev:watch": "next-remote-watch ./posts",
-		"build": "next build",
-		"export": "next export",
-		"start": "next start",
-		"lint": "eslint .",
-		"pages:build": "yarn next-on-pages",
-		"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-		"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
-		"cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
+		"build": "react-router build",
+		"cf-typegen": "wrangler types",
+		"deploy": "pnpm run build && wrangler deploy",
+		"dev": "react-router dev",
+		"postinstall": "npm run cf-typegen",
+		"preview": "pnpm run build && vite preview",
+		"typecheck": "npm run cf-typegen && react-router typegen && tsc -b"
 	},
 	"dependencies": {
-		"@babel/generator": "^7.17.10",
-		"@babel/parser": "^7.17.10",
-		"@babel/traverse": "^7.17.10",
-		"@babel/types": "^7.17.10",
-		"@mapbox/rehype-prism": "^0.8.0",
-		"@mdx-js/loader": "^2.2.1",
-		"@next/mdx": "^13.1.1",
+		"@mdx-js/react": "^3.1.0",
 		"@nullptrs/feed": "^4.2.2",
-		"@opennextjs/cloudflare": "latest",
-		"axios": "^0.26.1",
-		"bright": "^0.8.4",
-		"common-tags": "^1.8.2",
-		"cookie": "^0.4.2",
-		"dayjs": "^1.11.0",
-		"envsafe": "^2.0.3",
-		"geist": "^1.2.0",
-		"glob": "^8.0.3",
-		"globby": "14",
+		"@tailwindcss/typography": "^0.5.16",
+		"fast-glob": "^3.3.3",
 		"gray-matter": "^4.0.3",
-		"jsonwebtoken": "^8.5.1",
-		"next": "latest",
-		"next-mdx-remote": "^4.4.1",
-		"react": "latest",
-		"react-dom": "latest",
-		"rehype-trest-sitter": "^0.1.0",
-		"remark-gfm": "^3.0.1",
-		"remark-images": "^3.1.0",
-		"sharp": "^0.30.7",
-		"urlcat": "^2.0.4"
+		"isbot": "^5.1.27",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-router": "^7.5.3"
 	},
 	"devDependencies": {
-		"@cloudflare/next-on-pages": "^1.13.6",
-		"@cloudflare/workers-types": "^4.20241127.0",
-		"@tailwindcss/typography": "^0.5.2",
-		"@types/babel__generator": "^7",
-		"@types/babel__traverse": "^7",
-		"@types/common-tags": "^1.8.1",
-		"@types/cookie": "^0.4.1",
-		"@types/glob": "^8",
-		"@types/jsonwebtoken": "^8.5.8",
-		"@types/mapbox__rehype-prism": "^0",
-		"@types/react": "^17.0.43",
-		"@types/react-syntax-highlighter": "^13.5.2",
-		"@types/sharp": "^0",
-		"@types/tailwindcss": "^3.0.10",
-		"@typescript-eslint/eslint-plugin": "^5.17.0",
-		"@typescript-eslint/parser": "^5.17.0",
-		"autoprefixer": "^10.4.4",
-		"const-module-loader": "^0.1.1",
-		"discord-api-types": "^0.30.0",
-		"eslint": "^8.12.0",
-		"eslint-config-next": "latest",
-		"eslint-config-xo": "^0.40.0",
-		"eslint-config-xo-react": "^0.27.0",
-		"eslint-config-xo-typescript": "^0.50.0",
-		"eslint-plugin-next-on-pages": "^1.10.0",
-		"next-remote-watch": "^2.0.0",
-		"postcss": "^8.4.12",
-		"prettier": "^2.6.1",
-		"tailwindcss": "^3.0.23",
-		"typescript": "^4.6.3",
+		"@cloudflare/vite-plugin": "^1.0.12",
+		"@mapbox/rehype-prism": "^0.9.0",
+		"@mdx-js/rollup": "^3.1.0",
+		"@react-router/dev": "^7.5.3",
+		"@tailwindcss/vite": "^4.1.4",
+		"@types/mapbox__rehype-prism": "^0.8.3",
+		"@types/node": "^20",
+		"@types/react": "^19.1.2",
+		"@types/react-dom": "^19.1.2",
+		"remark-frontmatter": "^5.0.0",
+		"remark-gfm": "^4.0.1",
+		"remark-mdx-frontmatter": "^5.2.0",
+		"rollup": "^4.44.1",
+		"tailwindcss": "^4.1.4",
+		"typescript": "^5.8.3",
+		"vite": "^6.3.3",
+		"vite-plugin-const": "^0.2.0",
+		"vite-tsconfig-paths": "^5.1.4",
 		"wrangler": "^4.22.0"
-	},
-	"packageManager": "yarn@4.9.1"
+	}
 }
