chore: fix rr stuff

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,6 +6,7 @@
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "nullptrs",
 	"compatibility_date": "2025-04-04",
+	"compatibility_flags": ["nodejs_compat"],
 	"main": "./workers/app.ts",
 	"vars": {},
 	"observability": {
