--- a/package.json
+++ b/package.json
@@ -24,22 +24,23 @@
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^1.0.12",
+		"@mapbox/rehype-prism": "^0.9.0",
+		"@mdx-js/rollup": "^3.1.0",
 		"@react-router/dev": "^7.5.3",
 		"@tailwindcss/vite": "^4.1.4",
 		"@types/mapbox__rehype-prism": "^0.8.3",
 		"@types/node": "^20",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
-		"tailwindcss": "^4.1.4",
-		"typescript": "^5.8.3",
-		"vite": "^6.3.3",
-		"vite-tsconfig-paths": "^5.1.4",
-		"wrangler": "^4.22.0",
 		"remark-frontmatter": "^5.0.0",
 		"remark-gfm": "^4.0.1",
 		"remark-mdx-frontmatter": "^5.2.0",
-		"@mdx-js/rollup": "^3.1.0",
+		"rollup": "^4.44.1",
+		"tailwindcss": "^4.1.4",
+		"typescript": "^5.8.3",
+		"vite": "^6.3.3",
 		"vite-plugin-const": "^0.2.0",
-		"@mapbox/rehype-prism": "^0.9.0"
+		"vite-tsconfig-paths": "^5.1.4",
+		"wrangler": "^4.22.0"
 	}
 }
